--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'London (England) -- Social life and customs'
 - !lcsh 'Cries -- England -- London'
 - !lcc 'DA'
+- GITenberg
 title: A History of the Cries of London, Ancient and Modern
 url: http://www.gutenberg.org/ebooks/37114
